[package]
license = "GPL-2.0-only"
name = "superepo"
version = "0.1.0"
edition = "2021"
keywords = ["cli", "development", "tools"]
categories = ["command-line-utilities", "development-tools"]
[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
